--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </ul>
         <form class="content__form">
           <label class="content__label" for="input-email">Email address</label>
+          <span class="error error-active">error</span>
           <input class="content__input" id="input-email" type="email" required minlength="5"
             placeholder="email@company.com" validate>
           <button class="content__btn">Subscribe to monthly newsletter</button>
