add succes popup

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- Sign-up form start -->
   <div class="container">
-    <div class="inner">
+    <div class="inner sing-up">
       <div class="content">
         <h1 class="content__title">
           Stay updated!
@@ -36,23 +36,21 @@
           </div>
           <input class="content__input" id="input-email" type="email" required minlength="5"
             placeholder="email@company.com">
-          <button class="content__btn btn-disabled" type="submit">Subscribe to monthly newsletter</button>
+          <button class="content__btn btn-disabled btn" type="submit">Subscribe to monthly newsletter</button>
         </form>
       </div>
       <img src="./assets/images/illustration-sign-up-desktop.svg" alt="" class="image">
     </div>
+
+
+    <div class="message message_disabled">
+      <img src="./assets/images/icon-success.svg" alt="" class="message__img">
+      <h1 class="message__title">Thanks for subscribing!</h1>
+      <p class="message__subtitle">A confirmation email has been sent to <span class="bold">ash@loremcompany.com</span>.
+        Please open it and click the button inside to confirm your subscription.</p>
+      <button class="message__btn btn">Dismiss message</button>
+    </div>
   </div>
-  <!-- Success message start -->
-
-  <!-- Thanks for subscribing!
-
-  A confirmation email has been sent to ash@loremcompany.com.
-  Please open it and click the button inside to confirm your subscription.
-
-  Dismiss message -->
-
-  <!-- Success message end -->
-
   <script src="./main.js"></script>
 </body>
 
